BUG: 10051 Make Federation accept/reject buttons wrap together.
QA: Ensure the bug is fixed. Bug wasn't actually IE8 specific - it was a
function of screen size (issue repros with chrome/ff with smaller windows).
Buttons should wrap after the text on small screens, but should never
separate (both buttons should wrap together). Also ensure buttons and text
appear inline under IE with a bigger screen or zoomed out.

--- a/app/styles/screen-administration-federation.sass
+++ b/app/styles/screen-administration-federation.sass
@@ -39,6 +39,9 @@
           display: inline
           position: relative
           top: -0.7em
+      .acceptRejectButtons
+        white-space: nowrap
+        display: inline-block
       .button
         opacity: 0.3
         @include transition-duration(0.5s)
